--- a/package.json
+++ b/package.json
@@ -41,5 +41,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+
+  "proxy": "https://lit-peak-40203.herokuapp.com/"
 }
